k8s/deploy-examdesigner-protocolparameterservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protocolparameterservice
  namespace: edaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protocolparameterservice
  template:
    metadata:
      labels:
        app: protocolparameterservice
    spec:
      containers:
      - image: edaascontainerregistry.azurecr.cn/protocolparameterservice:PreVA10.0.2
        name: protocolparameterservice
        ports:
        - containerPort: 9086
          protocol: TCP
        resources:
          limits:
            memory: 2048Mi
          requests:
            memory: 512Mi
      imagePullSecrets:
        - name: edaasacrcred
      nodeSelector:
        kubernetes.io/os: windows
      tolerations:
        - key: "OS"
          operator: "Equal"
          value: "Windows"
          effect: "NoSchedule"
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: protocolparameterservice-service 
  namespace: edaas
  labels:    
    app: protocolparameterservice
spec:    
  selector:    
    app: protocolparameterservice
  ports:
  - protocol: TCP    
    port: 9086        
    targetPort: 9086  
  clusterIP: 172.21.1.61   # only for smallk8s
