k8s/deploy-examdesigner-protocolrepositoryservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protocolrepositoryservicenextgen
  namespace: edaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protocolrepositoryservicenextgen
  template:
    metadata:
      labels:
        app: protocolrepositoryservicenextgen
    spec:
      containers:
      - image: edaascontainerregistry.azurecr.cn/protocolrepositoryservicenextgen:PreVA10.0.2
        name: protocolrepositoryservicenextgen
        ports:
        - containerPort: 9085
          protocol: TCP
        resources:
          limits:
            cpu: 4000m
          requests:
            cpu: 1000m
      imagePullSecrets:
        - name: edaasacrcred
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - key: "OS"
          operator: "Equal"
          value: "linux"
          effect: "NoSchedule"
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: protocolrepositoryservicenextgen-service   
  namespace: edaas
  labels:    
    app: protocolrepositoryservicenextgen
spec:    
  selector:    
    app: protocolrepositoryservicenextgen
  ports:
  - protocol: TCP    
    port: 9085        
    targetPort: 9085  
  clusterIP: 172.21.0.62  # only for smallk8s
