k8s/deploy-protocolcache.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protocolcache
  namespace: edaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protocolcache
  template:
    metadata:
      labels:
        app: protocolcache
    spec:
      containers:
      - image: redis:7.2.3
        name: protocolcache
        ports:
        - containerPort: 6379
          protocol: TCP
        command:
        - "redis-server"
        - "/redis-master/redis.conf"
        volumeMounts:
           - name: protocoldatabase-pv-storage
             mountPath: /data
           - mountPath: /redis-master
             name: config
      volumes:
        - name: protocoldatabase-pv-storage
          persistentVolumeClaim:
             claimName: protocoldatabase-pv-claim
        - name: config
          configMap:
            name: protocolredis-config
            items:
              - key: redis.conf
                path: redis.conf
      nodeSelector:
        kubernetes.io/os: linux
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: protocolcache-service
  namespace: edaas
spec:
  selector:
    app: protocolcache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  clusterIP: 172.21.0.64  # only for smallk8s
